crates/sith_python_parser/tests/snapshots/invalid_syntax@expressions__arguments__unclosed_2.py.snap
---
source: crates/sith_python_parser/tests/fixtures.rs
input_file: crates/sith_python_parser/resources/invalid/expressions/arguments/unclosed_2.py
---
## AST

```
Module(
    ModModule {
        range: 0..28,
        body: [
            Expr(
                ExprStmt {
                    range: 0..7,
                    value: Call(
                        CallExpr {
                            range: 0..7,
                            func: Name(
                                NameExpr {
                                    range: 0..4,
                                    id: Name("call"),
                                    ctx: Load,
                                },
                            ),
                            arguments: Arguments {
                                range: 4..7,
                                args: [
                                    Name(
                                        NameExpr {
                                            range: 5..6,
                                            id: Name("x"),
                                            ctx: Load,
                                        },
                                    ),
                                ],
                                keywords: [],
                            },
                        },
                    ),
                },
            ),
            FunctionDef(
                FunctionDefStmt {
                    range: 9..28,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("foo"),
                        range: 13..16,
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 16..18,
                        posonlyargs: [],
                        args: [],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    returns: None,
                    body: [
                        Pass(
                            PassStmt {
                                range: 24..28,
                            },
                        ),
                    ],
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | call(x,
  |        ^ Syntax Error: Expected ')', found newline
2 | 
3 | def foo():
4 |     pass
  |
